fixed the alignment of some background images in the nutrition section and added background images to the mobile menu

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1695,6 +1695,10 @@ a {
     &:nth-child(1) {
       right: 402px;
       top: -116px;
+
+      @media screen and (max-width: $bp-desktop) {
+        top: -64px;
+      }
     }
 
     &:nth-child(2) {
@@ -1719,7 +1723,7 @@ a {
 
     &:nth-child(6) {
       right: 98px;
-      top: 1254px;
+      top: 1218px;
     }
   }
 }
@@ -1727,6 +1731,7 @@ a {
 /*Mobile-menu*/
 .mobile-menu {
   position: fixed;
+  overflow: hidden;
   z-index: 2;
   top: 0;
   left: 0;
@@ -1741,6 +1746,7 @@ a {
   }
 
   &__container {
+    display: flex;
     padding: 16px 22px;
   }
 
@@ -1779,6 +1785,52 @@ a {
 
     & a {
       line-height: 0;
+    }
+  }
+
+  &__decoration-image {
+    position: absolute;
+
+    &:nth-child(1) {
+      width: 94px;
+      left: -42px;
+      top: 406px;
+    }
+
+    &:nth-child(2) {
+      width: 32px;
+      left: 124px;
+      top: 304px;
+    }
+
+    &:nth-child(3) {
+      width: 32px;
+      left: 158px;
+      top: 340px;
+    }
+
+    &:nth-child(4) {
+      width: 32px;
+      left: 176px;
+      top: 390px;
+    }
+
+    &:nth-child(5) {
+      width: 62px;
+      right: 28px;
+      top: 248px;
+    }
+
+    &:nth-child(6) {
+      width: 32px;
+      right: 84px;
+      top: 492px;
+    }
+
+    &:nth-child(7) {
+      width: 32px;
+      right: 134px;
+      top: 506px;
     }
   }
 }
